# full-stack-ai-systems-platform

./: README.md
003-agent-systems-architecture/: .gitignore  Makefile  README.md  pyproject.toml
003-agent-systems-architecture/agent_control_plane/: package_metadata.py
003-agent-systems-architecture/agent_control_plane/contracts/: common_contract_types.py  execution_envelope_models.py  workflow_state_models.py  workflow_step_result_models.py
003-agent-systems-architecture/docs/: naming-conventions.md
003-agent-systems-architecture/examples/shared_contracts/: create_sample_governed_envelope.py
003-agent-systems-architecture/reports/: shared_contract_validation_report.md
003-agent-systems-architecture/services/agent_control_plane/: state_models.py
003-agent-systems-architecture/tests/: test_project_structure.py  test_state_models.py
003-agent-systems-architecture/tests/contract/: test_shared_state_contract_boundaries.py
003-agent-systems-architecture/tests/unit/: test_common_contract_types.py  test_execution_envelope_models.py  test_project_foundation.py  test_workflow_state_models.py  test_workflow_step_result_models.py
