[project]
name = "agent-systems-architecture"
version = "0.1.0"
description = "Shared agent control plane with governed workflow profiles and trajectory evaluation"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "agent_control_plane*",
    "workflow_profiles*",
]
exclude = [
    "tests*",
    "traces*",
    "reports*",
    "diagrams*",
    "checkpoints*",
    "docs*",
]
namespaces = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
exclude = [
    "traces/",
    "checkpoints/",
    "reports/",
]

# Enable the Pydantic plugin
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
